--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-paginate",
-  "version": "8.1.3",
+  "name": "@silverwind/react-paginate",
+  "version": "10.0.0",
   "description": "A ReactJS component that creates a pagination.",
   "main": "./dist/react-paginate.js",
   "repository": {
